# zephyr_security_demonstrator

./: .gitignore  CMakeLists.txt  README  README.md  app.overlay  overlay-tls.conf  prj.conf
certs/: CA.der  CA.key  CA.pem  generate_certs.sh  host-cert.pem  host-csr.pem  host-key.pem
https_server/: https_server.py
new_certs/: CA.der  CA.key  CA.pem  host-cert.pem  host-csr.pem  host-key.pem
src/: CA.der  CA_cert.der  ca_certificate.h  common.h  flash_update.c  gui.c  http.c  led.c  led.h  main.c  shell_command.c  socket.c  thread.c  wifi.c  wifi.h  wifi_lib.c  wifi_lib.h
